Update connectiontest command usage, adapt /ping command to work the same way